--- a/book2.html
+++ b/book2.html
@@ -54,6 +54,7 @@
                     soldier pulls her out and rapes her before returning her to the prison. Days
                     later, Esi and the other women are taken onto a ship, but she loses her stone
                     in the dungeon.</p>
+                    <a href="https://www.amazon.com/Homegoing-Yaa-Gyasi/dp/1101971061"><button>Buy Book</button></a>
             </div>
         </div>
     </div>
