--- a/book4.html
+++ b/book4.html
@@ -49,6 +49,7 @@
                 and statistics that exhibit societal norms and gender schemas that dissuade women from asking for what
                 they
                 want.
+                <a href="https://www.amazon.com/Women-Dont-Ask-Negotiation-Strategies/dp/0553383876"><button>Buy Book</button></a>
         </div>
     </div>
 </body>
