--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
             </ul>
         </nav>
 
-        <div class="maina"   id="index.html">
+        <div class="maina" id="index.html">
             <div class="mained">
                 <h1 id="mainH">Hey,I'am</h1>
                 <h1 id="mainH">Juliet Gisemba</h1>
                 <p>Student,Tech-enthusiast,Reader</p>
                 <a href="#about.html"><button id="welcome_btn">Welcome</button></a>
-              
+
             </div>
             <div class="mainImg">
                 <img src="/images/circle-cropped.png" alt="">
@@ -44,6 +44,9 @@
         <div class="about" id="about.html">
 
             <div class="word1">
+                <div class="image">
+                    <img id="mypic" src="/images/mypic.jpg" alt="">
+                </div>
                 <div class="next-word">
                     <h4 id="quote">"LEARN THE FORMULAE AND ENJOY THE JOURNEY"</h4>
                     <h4>What I Stand for</h4>
@@ -52,13 +55,9 @@
                     <p><em>Being Opinionated</em></p>
                     <p><em>Education</em></p>
                 </div>
-                <div class="image">
-                    <img id="mypic" src="/images/mypic.jpg" alt="">
-                </div>
-
             </div>
 
-            <div>
+            <div id="aboutme">
                 <h1>About me</h1>
                 <p>Juliet is a 21 year old from Nairobi,Kenya currently a student in Software Development in AkiraChix
                     based Nairobi.
@@ -66,22 +65,15 @@
                     daughter.
                     Am passionate about tech and how tech has diverse and alot of opportunities to grow and model people
                     career wise.
-                    I belive in growth and embracing learning as the joyful part of life which makes me believe I can do
+                    I believe in growth and embracing learning as the joyful part of life which makes me believe I can
+                    do
                     it as long
                     as I can learn it,so theres nothing difficult to it.
-
-
-                <p>Have gotten an opportunity to study partly in the city and outside the city,am glad have tasted
-                    both of the experiences
-                    enough to tell stories.Before getting into tech my interest was to get into the medics field and
-                    become a doctor or
-                    a nurse because I thought they looked cool in their work outfits and for-go my chance to pursue
-                    Infortation Technology at Co-operative University.I later shifted after realizing I could not
-                    sacrifice
-                    a whole career lifetime for cool outfits and thats when I realized my passion for doing tech and I
-                    followed it in 2020.
-  
+                <p>My aspiration is to make a change and leave something for people to remember me for.I strongly
+                    believe everyone has a course to fulfil,and it might not be the same course to everyone else but
+                    we have a race to live.
                 </p>
+
             </div>
         </div>
 
@@ -94,11 +86,10 @@
                     <div class="descrption" id="descr">
                         <p>“Abel wanted a traditional marriage with a traditional wife. For a long
                             time I wondered why he ever married a woman like my mom in the first
-                            place, as she was the opposite of that in every way. If he wanted a
-                            woman to bow to him, there were plenty of girls back in Tzaneen being
-                            raised solely for that purpose. </p>
+                            place, as she was the opposite of that in every way.<a href="book1.html">
+                                <p>Read more....</p>
+                            </a> </p>
 
-                            <a href="book1.html"><button id="viewButton">VIEW MORE</button></a>
                     </div>
                 </div>
 
@@ -109,14 +100,15 @@
                     <div class="descrption" id="descr">
                         <p>Effia is born on the night of a raging fire in Fanteland. As she grows
                             up, her mother, Baaba, is cruel to her and abuses her, while her father,
-                            Cobbe, is kind. When Effia turns twelve, she begins to blossom into a
-                            young woman. She hopes to marry the next chief of the village.... </p>
+                            Cobbe, is kind.<a href="book1.html">
+                                <p>Read more....</p>
+                            </a> </p>
 
-                            <a href="book2.html"><button id="viewButton">VIEW MORE</button></a>
+
                     </div>
                 </div>
 
-                <div class="bordered"> 
+                <div class="bordered">
                     <div class="book3">
                         <img id="blog1Img" src="/images/women_dont_ask.jpg" alt="">
                     </div>
@@ -125,10 +117,10 @@
                             estate
                             contracts
                             and rates for subcontractors, to their own benefit arrangements from insurance companies.”
-                            Women Don’t Ask, by Linda Babcock and Sara Laschever....
+                            <a href="book4.html">
+                                <p>Read more.....</p>
+                            </a>
                         </p>
-
-                        <a href="book4.html"><button id="viewButton">VIEW MORE</button></a>
                     </div>
 
                 </div>
@@ -139,10 +131,8 @@
                     </div>
                     <div class="descrption">
                         <p>"Young men today have been bombarded with images of wealth and success
-                            that tell them that buying the hottest car or the most bling-blingin’
-                            jewelry is what they should be motivated by....</p>
+                            that tell them that buying the hottest car or the most bling-blingin’<a href="book3.html">Read more.....</a></p>
 
-                            <a href="book3.html"><button id="viewButton">VIEW MORE</button></a>
                     </div>
                 </div>
 
@@ -157,32 +147,43 @@
         <div class="mainFooter" id="contacts.html">
             <h1 id="contactTitle">Contact me</h1>
             <div class="footer">
-            <div class="contact">
-                <h5>Email : gisembajuliett@gmail.com</h5>
-                <h5>Tel : 0705699879</h5>
-            </div>
-            <div class="form">
-                <form id="form" action="">
-                    <input type="text" placeholder="Name" required>
-                    <input type="text" placeholder="Email" required>
-                    <a href="subscribe"><button id="subscribe" onclick="">Subscribe</button></a>
+                <div class="contact">
+                    <h5>Email : gisembajuliett@gmail.com</h5>
+                    <h5>Tel : 0705699879</h5>
+                </div>
+                <div class="form">
+                    <form id="form" action="">
+                        <input type="text" placeholder="Name" required>
+                        <input type="text" placeholder="Email" required>
 
-                    <div class="icons">
-                        <i class="fab fa-github-square"><a href="https://github.com/Juliet879"
-                                id="profile-link"></a></i>
-                        <a href="https://mail.google.com/mail/u/1/#inbox"><i class="fab fa-email"></i></a>
-                        <a href="https://instagram.com/Julit879" id="profile-link"> <i class="fab fa-instagram"></i></a>
-                        <a href="linkedin.com/in/juliet-gisemba-a32903208/"><i class="fab fa-linkedin"></i></a>
-                        <h6 id="follow">Follow Me</h6>
+                        <a href="subscribe"><button id="subscribe" onclick="onSubmit()">Subscribe</button></a>
 
-                    </div>
-                </form>
+
+
+                    </form>
+                </div>
+
             </div>
-</div>
         </div>
     </div>
     </div>
+    <div>
+        <ul class="icons">
+            <div class="childIcon">
+                <h6 id="follow">Follow Me</h6>
+                <li><a href="https://www.behance.net/"><i class="fab fa-behance"></i></a></li>
+                <li><a href="https://twitter.com/"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a></li>
+                <li><a href="https://www.pinterest.com/"><i class="fab fa-pinterest"></i></a></li>
+                <li><a href="https://github.com/Juliet879"><i class="fab fa-github-square"></i></a></li>
+            </ul>
+            </div>
+        <footer>
+            <p id="myfoot">JulietG &copy Website</p>
+        </footer>
+    </div>
 
+    <script src="scripts.js"></script>
 </body>
 
 </html>
